[project]
name = "python-batchtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kubernetes-typed>=18.20.2",
    "openshift-client>=2.0.5",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "ty>=0.0.1a24"]

[tool.basedpyright]

ignore = ["**/tests"]
reportUnusedCallResult = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeStubs = false
reportImplicitStringConcatenation = false
analyzeUnannotatedFunctions = false


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=html"

[tool.coverage.report]
omit = ["tests/*"]
